@@ -3,6 +3,10 @@
 # see misc/tools/kconfig-language.txt.
 #
 
+menu "USB CDC/ACM Class Commands"
+source "$APPSDIR/system/cdcacm/Kconfig"
+endmenu
+
 menu "Custom Free Memory Command"
 source "$APPSDIR/system/free/Kconfig"
 endmenu
@@ -51,7 +55,7 @@ menu "Stack Monitor"
 source "$APPSDIR/system/stackmonitor/Kconfig"
 endmenu
 
-menu "USB Mass Storage Class"
+menu "USB Mass Storage Class Commands"
 source "$APPSDIR/system/usbmsc/Kconfig"
 endmenu
 
