@@ -3,16 +3,19 @@
 # see misc/tools/kconfig-language.txt.
 #
 
-config EXAMPLES_CDCACM
-	bool "CDC/ACM example"
+config SYSTEM_CDCACM
+	bool "CDC/ACM class controls"
 	default n
-	depends on CDCACM
+	depends on CDCACM && !KERNEL_BUILD
 	---help---
-		Enable the USB CDC/ACM class driver example
+		Enable the USB CDC/ACM class controls.  These controls include:
 
-if EXAMPLES_CDCACM
+		sercon:  Connect the mass storage device to the host
+		serdis:  Disconnect the mass storage device to the host
 
-config EXAMPLES_CDCACM_DEVMINOR
+if SYSTEM_CDCACM
+
+config SYSTEM_CDCACM_DEVMINOR
 	int "CDC/ACM Minor Device Number"
 	default 0
 	---help---
@@ -20,53 +23,53 @@ config EXAMPLES_CDCACM_DEVMINOR
 		For example, N in /dev/ttyACMN.  Used for registering the serial
 		driver. Default is zero.
 
-config EXAMPLES_CDCACM_TRACEINIT
+config SYSTEM_CDCACM_TRACEINIT
 	bool "USB Trace Initialization"
 	default n
 	depends on USBDEV_TRACE || DEBUG_USB
 	---help---
 		If USBDEV_TRACE is enabled (or DEBUG and DEBUG_USB),
-		then the example code will also manage the USB trace output.  The
+		then the add-on code will also manage the USB trace output.  The
 		amount of trace output can be controlled this configuration value:
 		This setting will show USB initialization events
 
-config EXAMPLES_CDCACM_TRACECLASS
+config SYSTEM_CDCACM_TRACECLASS
 	bool "USB Trace Class"
 	default n
 	depends on USBDEV_TRACE || DEBUG_USB
 	---help---
 		If USBDEV_TRACE is enabled (or DEBUG and DEBUG_USB),
-		then the example code will also manage the USB trace output.  The
+		then the add-on code will also manage the USB trace output.  The
 		amount of trace output can be controlled this configuration value:
 		This setting will show USB class driver events
 
-config EXAMPLES_CDCACM_TRACETRANSFERS
+config SYSTEM_CDCACM_TRACETRANSFERS
 	bool "USB Trace Transfers"
 	default n
 	depends on USBDEV_TRACE || DEBUG_USB
 	---help---
 		If USBDEV_TRACE is enabled (or DEBUG and DEBUG_USB),
-		then the example code will also manage the USB trace output.  The
+		then the add-on code will also manage the USB trace output.  The
 		amount of trace output can be controlled this configuration value:
 		This setting will show USB data transfer events
 
-config EXAMPLES_CDCACM_TRACECONTROLLER
+config SYSTEM_CDCACM_TRACECONTROLLER
 	bool "USB Trace Device Controller Events"
 	default n
 	depends on USBDEV_TRACE || DEBUG_USB
 	---help---
 		If USBDEV_TRACE is enabled (or DEBUG and DEBUG_USB),
-		then the example code will also manage the USB trace output.  The
+		then the add-on code will also manage the USB trace output.  The
 		amount of trace output can be controlled this configuration value:
 		This setting will show USB device controller events
 
-config EXAMPLES_CDCACM_TRACEINTERRUPTS
+config SYSTEM_CDCACM_TRACEINTERRUPTS
 	bool "USB Trace Device Controller Interrupt Events"
 	default n
 	depends on USBDEV_TRACE || DEBUG_USB
 	---help---
 		If USBDEV_TRACE is enabled (or DEBUG and DEBUG_USB),
-		then the example code will also manage the USB trace output.  The
+		then the add-on code will also manage the USB trace output.  The
 		amount of trace output can be controlled this configuration value:
 		This setting will show USB device controller interrupt-related events.
 
