@@ -196,7 +196,7 @@
 	  backspace or a DEL character as a backspace (i.e., deleting the character
 	  to the left of the cursor).  This makes NSH less dependent on particular
 	  keyboard mappings of the Backspace key.  Submitted by Mike Smith.
-	* apps/examples/cdcacm:  An example that illustrates how the CDC/ACM driver
+	* apps/system/cdcacm:  An example that illustrates how the CDC/ACM driver
 	  may to connected and disconnected through software control.
 	* apps/examples/nsh/nsh_main.c:  If available, call up_cxxinitialize() to
 	  initialize all statically defined C++ classes.
@@ -664,3 +664,4 @@
 	* apps/system/stackmonitor:  Add a daemon that can be used to
 	  monitor stack usage by all threads (2013-9-24).
 	* system/usbmsc:  Move examples/usbmsc to system/usbmsc (2013-9-25).
+	* system/cdcacm:  Move examples/cdcacm to system/cdcacm (2013-9-25).
